<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piumalk.ticketin.MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_textview_from"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_textview_to"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.605"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_From"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginStart="16dp" />

    <Spinner
        android:id="@+id/spinner_To"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/spinner_From"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/home_textview_date"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_From" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/home_textview_time"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/home_textview_numberOfTickets"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/edittext_No_of_Tickets"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="220dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.954"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/button_Proceed"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/home_button_proceed"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="67dp"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/etext_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="47dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="103dp"
        app:layout_constraintHorizontal_bias="0.486"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="47dp"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/etext_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="47dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etext_Date"
        app:layout_constraintHorizontal_bias="0.506"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/edittext_No_of_Tickets"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="47dp"
        tools:layout_constraintLeft_creator="1"
        android:editable="false"/>
</android.support.constraint.ConstraintLayout>
